--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write src/**/*.ts",
     "dev": "serverless offline start",
+    "debug": "serverless offline start --debug",
     "start": "NODE_OPTIONS='--enable-source-maps' serverless offline start"
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.149",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.16",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
