Copy of local code

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NMKR_PROJECT_UID=<your-nmkr-project-id>
 RECEIVER_ADDRESS=<your-wallet-address>
 BLOCKCHAIN=Cardano
 BATCH_SIZE=500
+AWS_REGION=us-east-1
+BUCKET_NAME=your-bucket-name
