--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
-org: blockialabs
+org: blockia
 # "app" enables Serverless Framework Dashboard features and sharing them with other Services.
 app: api
 # "service" is the name of this project. This will also be added to your AWS resource names.
@@ -10,6 +10,8 @@ useDotenv: true
 provider:
   name: aws
   runtime: nodejs20.x
+  timeout: 300 # Add this line - global default timeout (5 minutes)
+  memorySize: 1024 # Add this line - increase memory allocation
   environment:
     NODE_ENV: ${env:NODE_ENV, 'development'} # Auto detect environment
     NMKR_API_KEY: ${env:NMKR_API_KEY, 'key-local-dev'} # Default for local
@@ -19,12 +21,21 @@ provider:
     RECEIVER_ADDRESS: ${env:RECEIVER_ADDRESS} # Wallet address
     BLOCKCHAIN: ${env:BLOCKCHAIN, 'Cardano'} # Blockchain
     BATCH_SIZE: ${env:BATCH_SIZE, '500'} # Safe default batch size
+    AWS_REGION: ${env:AWS_REGION, 'us-east-1'} # Default AWS region
+    BUCKET_NAME: ${env:BUCKET_NAME, ''} # Default bucket name
 
 plugins:
   - serverless-offline
 
+custom:
+  serverless-offline:
+    httpTimeoutMs: 300000 # 5 minutes in milliseconds for local development
+    lambdaTimeout: 300 # 5 minutes in seconds
+
 functions:
   api:
     handler: .build/handler.handler
+    timeout: 300 # Add this line - function-specific timeout
+    memorySize: 1024 # Add this line - function-specific memory
     events:
       - httpApi: '*'
