chore: Remove unnecesery logs

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NMKR_API_KEY=<your-nmkr-api-key>
 NMKR_BASE_URL=https://studio-api.preprod.nmkr.io
 NMKR_CUSTOMER_ID=<your-nmkr-customer-id>
 NMKR_PROJECT_UID=<your-nmkr-project-id>
+NMKR_POLICY_ID=<your-nmkr-policy-id>
 RECEIVER_ADDRESS=<your-wallet-address>
 BLOCKCHAIN=Cardano
 BATCH_SIZE=500
