--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "skipLibCheck": true,
     "moduleResolution": "node",
     "types": ["node"],
-    "baseUrl": "."
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
