feat(reports): add NFT and transaction reporting in CSV & PDF formats

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,32 @@
-NODE_ENV=development
-NMKR_API_KEY=<your-nmkr-api-key>
-NMKR_BASE_URL=https://studio-api.preprod.nmkr.io
-NMKR_CUSTOMER_ID=<your-nmkr-customer-id>
-NMKR_PROJECT_UID=<your-nmkr-project-id>
-RECEIVER_ADDRESS=<your-wallet-address>
-BLOCKCHAIN=Cardano
-MINT_BATCH_SIZE=10
-MINT_TOTAL_COUNT=500
+# ========================
+# Application Configuration
+# ========================
+NODE_ENV=development                       # Set the environment (development, production, test)
+
+# ========================
+# NMKR Configuration
+# ========================
+NMKR_API_KEY=<your-nmkr-api-key>           # Your API key for NMKR
+NMKR_BASE_URL=https://studio-api.preprod.nmkr.io  # NMKR API base URL (adjust for prod if needed)
+NMKR_CUSTOMER_ID=<your-nmkr-customer-id>   # Your NMKR customer ID
+NMKR_PROJECT_UID=<your-nmkr-project-id>    # Your NMKR project UID
+RECEIVER_ADDRESS=<your-wallet-address>     # Wallet address to receive minted NFTs
+
+# ========================
+# Blockchain Configuration
+# ========================
+BLOCKCHAIN=Cardano                         # Supported blockchain (Cardano only)
+MINT_BATCH_SIZE=10                         # Number of NFTs per mint batch
+MINT_TOTAL_COUNT=500                       # Total number of NFTs to mint
+CONCURRENCY_LIMIT=5                        # Maximum concurrent API calls
+RETRY_COUNT=3                              # Number of retry attempts on failure
+
+# ========================
+# AWS Configuration
+# ========================
+AWS_REGION=us-east-1                         # AWS region (e.g., us-east-1, eu-west-1)
+AWS_S3_BUCKET=your-s3-bucket-name            # Name of your S3 bucket for storage
+AWS_DYNAMO_TABLE_BATCH_RECORDS=BatchRecords  # Name of your DynamoDB table
+AWS_DYNAMO_TABLE_RECORDS_STATUS=ReportStatus # Name of your DynamoDB table
+AWS_ACCESS_KEY_ID=your-access-key-id         # AWS Access Key ID
+AWS_SECRET_ACCESS_KEY=your-secret-access-key# AWS Secret Access Key
