--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "start": "NODE_OPTIONS='--enable-source-maps' serverless offline start"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.812.0",
+    "@aws-sdk/client-s3": "^3.812.0",
+    "@aws-sdk/util-dynamodb": "^3.812.0",
     "axios": "^1.9.0",
+    "csv-writer": "^1.6.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
-    "serverless-http": "^3.2.0"
+    "p-limit": "^6.2.0",
+    "p-retry": "^6.2.1",
+    "pdfkit": "^0.17.1",
+    "serverless-http": "^3.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.149",
@@ -25,6 +33,7 @@
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.16",
+    "@types/pdfkit": "^0.13.9",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "eslint": "^9.26.0",
