--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,6 @@ useDotenv: true
 provider:
   name: aws
   runtime: nodejs20.x
-  timeout: 30
   environment:
     NODE_ENV: ${env:NODE_ENV, 'development'} # Auto detect environment
     NMKR_API_KEY: ${env:NMKR_API_KEY, 'key-local-dev'} # Default for local
@@ -21,6 +20,14 @@ provider:
     BLOCKCHAIN: ${env:BLOCKCHAIN, 'Cardano'} # Blockchain
     MINT_BATCH_SIZE: ${env:MINT_BATCH_SIZE, 10} # Safe default batch size
     MINT_TOTAL_COUNT: ${env:MINT_TOTAL_COUNT, 500} # Safe default batch total
+    CONCURRENCY_LIMIT: ${env:CONCURRENCY_LIMIT, 5}
+    RETRY_COUNT: ${env:RETRY_COUNT, 3}
+    AWS_REGION: ${env:AWS_REGION}
+    AWS_S3_BUCKET: ${env:AWS_S3_BUCKET}
+    AWS_DYNAMO_TABLE_BATCH_RECORDS: ${env:AWS_DYNAMO_TABLE_BATCH_RECORDS, 'BatchRecords'}
+    AWS_DYNAMO_TABLE_RECORDS_STATUS: ${env:AWS_DYNAMO_TABLE_RECORDS_STATUS, 'ReportStatus'}
+    AWS_ACCESS_KEY_ID: ${env:AWS_ACCESS_KEY_ID}
+    AWS_SECRET_ACCESS_KEY: ${env:AWS_SECRET_ACCESS_KEY}
 
 plugins:
   - serverless-offline
