feat: Initial processing and uploading to nmkr api (#5)
* Copy of local code

* chore: Remove unnecesery logs

* refactor: Remove unnecesery fields, interfaces, configs

* chore:Remove unnecessary things

* Delete cached DS_sotre

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ NMKR_API_KEY=<your-nmkr-api-key>           # Your API key for NMKR
 NMKR_BASE_URL=https://studio-api.preprod.nmkr.io  # NMKR API base URL (adjust for prod if needed)
 NMKR_CUSTOMER_ID=<your-nmkr-customer-id>   # Your NMKR customer ID
 NMKR_PROJECT_UID=<your-nmkr-project-id>    # Your NMKR project UID
+NMKR_POLICY_ID=<your-nmkr-policy-id>
 RECEIVER_ADDRESS=<your-wallet-address>     # Wallet address to receive minted NFTs
 
 # ========================
@@ -30,3 +31,4 @@ AWS_DYNAMO_TABLE_BATCH_RECORDS=BatchRecords  # Name of your DynamoDB table
 AWS_DYNAMO_TABLE_RECORDS_STATUS=ReportStatus # Name of your DynamoDB table
 AWS_ACCESS_KEY_ID=your-access-key-id         # AWS Access Key ID
 AWS_SECRET_ACCESS_KEY=your-secret-access-key# AWS Secret Access Key
+BUCKET_NAME=your-bucket-name
