build(env): add SERVERLESS_ORG variable for Serverless organization configuration

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # Application Configuration
 # ========================
 NODE_ENV=development                       # Set the environment (development, production, test)
+SERVERLESS_ORG=<your-org>                 # Serverless organization name
 
 # ========================
 # NMKR Configuration
