feat(api): Add jwt validation, secure api routes

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,13 @@ NODE_ENV=development                       # Set the environment (development, p
 SERVERLESS_ORG=<your-org>                 # Serverless organization name
 
 # ========================
+# JWT Configuration
+# ========================
+JWT_SECRET=<your-very-secure-secret>
+JWT_ISSUER=<your-app-name>
+JWT_EXPIRES_IN=1d  # or 1d, or 3600 (as string if in seconds)
+
+# ========================
 # NMKR Configuration
 # ========================
 NMKR_API_KEY=<your-nmkr-api-key>           # Your API key for NMKR
