--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "deploy": "serverless deploy",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint src --ext .ts --config eslint.config.cjs",
+    "lint:fix": "eslint src --ext .ts --fix --config eslint.config.cjs",
     "format": "prettier --write src/**/*.ts",
     "dev": "serverless offline start",
     "debug": "serverless offline start --debug",
-    "start": "NODE_OPTIONS='--enable-source-maps' serverless offline start"
+    "start": "NODE_OPTIONS='--enable-source-maps' serverless offline start",
+    "generate-admin-token": "npx ts-node -r tsconfig-paths/register scripts/generateAdminToken.ts"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.812.0",
@@ -20,6 +21,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "p-limit": "^6.2.0",
     "p-retry": "^6.2.1",
@@ -31,17 +33,21 @@
     "@types/aws-lambda": "^8.10.149",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.16",
     "@types/pdfkit": "^0.13.9",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.4.0",
     "prettier": "^3.5.3",
     "serverless-offline": "^14.4.0",
     "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
