chore: Deployment setup integrated with FIFO and DLQ

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ AWS_SECRET_ACCESS_KEY=your-secret-access-key# AWS Secret Access Key
 AWS_BUCKET_NAME_CSV=digifarm-files
 AWS_BUCKET_NAME_NFT=digifarm-nfts
 AWS_SQS_QUEUE_URL=http://your-sqs-url/queue/queue-name
+AWS_SQS_QUEUE_ARN=arn:aws:sqs:us-east-1:202533530220:Digifarm.fifo
 
 
 # ========================
