Improve processing with SFTP and SQS (#9)
* Copy of local code

* chore: Remove unnecesery logs

* refactor: Remove unnecesery fields, interfaces, configs

* chore:Remove unnecessary things

* Delete cached DS_sotre

* chore: Deployment setup integrated with FIFO and DLQ

* chore: Take arn from env

* remove sqs-offline from dependencies

* refactor: Remove unnecessary things

* fix: Lint and format

--- a/.env.example
+++ b/.env.example
@@ -32,10 +32,20 @@ RETRY_COUNT=3                              # Number of retry attempts on failure
 # ========================
 # AWS Configuration
 # ========================
-AWS_REGION=us-east-1                         # AWS region (e.g., us-east-1, eu-west-1)
 AWS_S3_BUCKET=your-s3-bucket-name            # Name of your S3 bucket for storage
 AWS_DYNAMO_TABLE_BATCH_RECORDS=BatchRecords  # Name of your DynamoDB table
 AWS_DYNAMO_TABLE_RECORDS_STATUS=ReportStatus # Name of your DynamoDB table
-AWS_ACCESS_KEY_ID=your-access-key-id         # AWS Access Key ID
-AWS_SECRET_ACCESS_KEY=your-secret-access-key# AWS Secret Access Key
-BUCKET_NAME=your-bucket-name
+AWS_BUCKET_NAME_CSV=digifarm-files
+AWS_BUCKET_NAME_NFT=digifarm-nfts
+AWS_SQS_QUEUE_URL=http://your-sqs-url/queue/queue-name
+AWS_SQS_QUEUE_ARN=arn:aws:sqs:us-east-1:202533530220:Digifarm.fifo
+
+
+# ========================
+# SFTP Configuration
+# ========================
+SFTP_HOST=<host>
+SFTP_PORT=<port>
+SFTP_USERNAME=<username>
+SFTP_PASSWORD=<password>
+REMOTE_PATH=<remote-path>
