--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.812.0",
     "@aws-sdk/client-s3": "^3.812.0",
+    "@aws-sdk/client-sqs": "^3.812.0",
     "@aws-sdk/util-dynamodb": "^3.812.0",
+    "@serverless/utils": "^6.15.0",
     "axios": "^1.9.0",
     "csv-writer": "^1.6.0",
     "csvtojson": "^2.0.10",
@@ -27,6 +29,7 @@
     "p-retry": "^6.2.1",
     "pdfkit": "^0.17.1",
     "serverless-http": "^3.2.0",
+    "ssh2-sftp-client": "^12.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.16",
     "@types/pdfkit": "^0.13.9",
+    "@types/ssh2-sftp-client": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "eslint": "^9.27.0",
