--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # ========================
 NODE_ENV=development                       # Set the environment (development, production, test)
 SERVERLESS_ORG=<your-org>                 # Serverless organization name
+DOMAIN=<your-domain>                  
 
 # ========================
 # JWT Configuration
