refactor(reports): Queue processing minting reports via SQS

--- a/.env.example
+++ b/.env.example
@@ -34,8 +34,10 @@ RETRY_COUNT=3                              # Number of retry attempts on failure
 # ========================
 AWS_S3_BUCKET=your-s3-bucket-name            # Name of your S3 bucket for storage
 AWS_DYNAMO_TABLE_RECORDS_STATUS=ReportStatus # Name of your DynamoDB table
-AWS_SQS_QUEUE_URL=http://your-sqs-url/queue/queue-name
-AWS_SQS_QUEUE_ARN=arn:aws:sqs:us-east-1:202533530220:Digifarm.fifo
+AWS_SQS_UPLOADS_QUEUE_URL="https://sqs.[REGION].amazonaws.com/[ACCOUNT-ID]/[QUEUE]"
+AWS_SQS_UPLOADS_QUEUE_ARN="arn:aws:sqs:[REGION]:[ACCOUNT-ID]:[QUEUE]"
+AWS_SQS_REPORT_QUEUE_URL="https://sqs.[REGION].amazonaws.com/[ACCOUNT-ID]/[QUEUE]"
+AWS_SQS_REPORT_QUEUE_ARN="arn:aws:sqs:[REGION]:[ACCOUNT-ID]:[QUEUE]"
 
 
 # ========================
