refactor(minting): Remove batching and batch processing, remove dead code, process reports via SQS. (#25)
* refactor(minting): Remove batching and batch processing, remove dead code.

* refactor(reports): Queue processing minting reports via SQS

* feat(reports): prevent new report generation when an active report exists

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # ========================
 NODE_ENV=development                       # Set the environment (development, production, test)
 SERVERLESS_ORG=<your-org>                 # Serverless organization name
-DOMAIN=<your-domain>                  
+DOMAIN=<your-domain>
 
 # ========================
 # JWT Configuration
@@ -25,8 +25,7 @@ RECEIVER_ADDRESS=<your-wallet-address>     # Wallet address to receive minted NF
 # Blockchain Configuration
 # ========================
 BLOCKCHAIN=Cardano                         # Supported blockchain (Cardano only)
-MINT_BATCH_SIZE=10                         # Number of NFTs per mint batch
-MINT_TOTAL_COUNT=500                       # Total number of NFTs to mint
+MAX_MINT_LIMIT=10                          # Max number of NFTs to mint at once
 CONCURRENCY_LIMIT=5                        # Maximum concurrent API calls
 RETRY_COUNT=3                              # Number of retry attempts on failure
 
@@ -34,10 +33,11 @@ RETRY_COUNT=3                              # Number of retry attempts on failure
 # AWS Configuration
 # ========================
 AWS_S3_BUCKET=your-s3-bucket-name            # Name of your S3 bucket for storage
-AWS_DYNAMO_TABLE_BATCH_RECORDS=BatchRecords  # Name of your DynamoDB table
 AWS_DYNAMO_TABLE_RECORDS_STATUS=ReportStatus # Name of your DynamoDB table
-AWS_SQS_QUEUE_URL=http://your-sqs-url/queue/queue-name
-AWS_SQS_QUEUE_ARN=arn:aws:sqs:us-east-1:202533530220:Digifarm.fifo
+AWS_SQS_UPLOADS_QUEUE_URL="https://sqs.[REGION].amazonaws.com/[ACCOUNT-ID]/[QUEUE]"
+AWS_SQS_UPLOADS_QUEUE_ARN="arn:aws:sqs:[REGION]:[ACCOUNT-ID]:[QUEUE]"
+AWS_SQS_REPORT_QUEUE_URL="https://sqs.[REGION].amazonaws.com/[ACCOUNT-ID]/[QUEUE]"
+AWS_SQS_REPORT_QUEUE_ARN="arn:aws:sqs:[REGION]:[ACCOUNT-ID]:[QUEUE]"
 
 
 # ========================
