test: add integration tests

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ DOMAIN=<your-domain>
 JWT_SECRET=<your-very-secure-secret>
 JWT_ISSUER=<your-app-name>
 JWT_EXPIRES_IN=1d  # or 1d, or 3600 (as string if in seconds)
+TEST_ADMIN_JWT=<your-test-admin-jwt>
+TEST_USER_JWT=<your-test-user-jwt>
 
 # ========================
 # NMKR Configuration
