--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "dev": "serverless offline start",
     "debug": "serverless offline start --debug",
     "start": "NODE_OPTIONS='--enable-source-maps' serverless offline start",
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=unit",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:api": "jest --testPathPattern=api",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
     "generate-admin-token": "npx ts-node -r tsconfig-paths/register scripts/generateAdminToken.ts"
   },
   "dependencies": {
@@ -31,21 +37,31 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
     "@types/aws-lambda": "^8.10.149",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.16",
     "@types/ssh2-sftp-client": "^9.0.4",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
+    "aws-sdk-client-mock": "^4.1.0",
+    "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.4.0",
+    "jest": "^29.7.0",
+    "jest-sonar-reporter": "^2.0.0",
     "prettier": "^3.5.3",
     "serverless-offline": "^14.4.0",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
