--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -10,6 +10,7 @@ on:
 env:
   NODE_ENV: ${{ secrets.NODE_ENV }}
   SERVERLESS_ORG: ${{ secrets.SERVERLESS_ORG }}
+  SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
   DOMAIN: ${{ secrets.DOMAIN }}
 
   JWT_SECRET: ${{ secrets.JWT_SECRET }}
