Change the working dir

--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./client
+
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
