--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src --ext .ts --config eslint.config.cjs",
     "lint:fix": "eslint src --ext .ts --fix --config eslint.config.cjs",
     "format": "prettier --write src/**/*.ts",
-    "dev": "serverless offline start",
+    "dev": "serverless offline --config serverless-local.yml",
     "debug": "serverless offline start --debug",
     "start": "NODE_OPTIONS='--enable-source-maps' serverless offline start",
     "test": "jest",
